--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.travelidge">
+    package="com.example.issue3">
    <application
-        android:label="travelidge"
+        android:label="issue3"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
