설정 파일로 설정  -> 수정할 것:  정보를 요청할 때 error, 코드 수정없이  Build Configuration 의 변경만으로 환경 분리가 가능하도록 설정

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.travelidge">
+    package="com.kupstuido.travelidge">
     <application
         android:icon="@mipmap/ic_launcher"
         android:label="travelidge">
