--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -44,9 +44,9 @@ android {
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
 
-        applicationId "com.example.travelidge"
-        //minSdkVersion 20
-        minSdkVersion flutter.minSdkVersion
+        applicationId "com.kupstuido.travelidge"
+        minSdkVersion 21
+        //minSdkVersion flutter.minSdkVersion
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
