--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.kupstuido.travelidge">
     <application
-        android:icon="@mipmap/ic_launcher"
-        android:label="travelidge">
+
+        android:label="@string/app_name"
+        android:icon="@mipmap/ic_launcher">
 
         <activity
             android:name=".MainActivity"
