--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   firebase_core: ^1.17.0
   firebase_messaging: ^11.4.0
   flutter_local_notifications: ^9.5.3+1
+  cloud_firestore: ^3.1.15
+  firebase_auth: ^3.3.18
 
 dev_dependencies:
   flutter_test:
