--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_local_notifications: ^9.5.3+1
   cloud_firestore: ^3.1.15
   firebase_auth: ^3.3.18
+  table_calendar: ^3.0.6
 
 dev_dependencies:
   flutter_test:
