--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   #cloud_firestore: ^3.1.15
   #firebase_auth: ^3.3.18
   table_calendar: ^3.0.6
+  scroll_to_index: ^3.0.1
+
   #firebase_core: ^1.18.0
 
 dev_dependencies:
