--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   #cloud_firestore: ^3.1.15
   #firebase_auth: ^3.3.18
   table_calendar: ^3.0.6
+  intl: ^0.17.0
 
   #firebase_core: ^1.18.0
 
