--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   #firebase_auth: ^3.3.18
   table_calendar: ^3.0.6
   intl: ^0.17.0
+  readmore: ^2.2.0
 
   #firebase_core: ^1.18.0
 
