--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   table_calendar: ^3.0.6
   intl: ^0.17.0
   readmore: ^2.2.0
+  photo_manager: ^2.2.0
 
   #firebase_core: ^1.18.0
 
