--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   image_picker: ^0.8.5+3
   permission_handler: ^10.0.0
   flutter_svg: ^1.1.4
+  flutter_sound: ^9.2.13
 
   #firebase_core: ^1.18.0
 
