--- a/ios/Podfile
+++ b/ios/Podfile
@@ -37,5 +37,10 @@ end
 post_install do |installer|
   installer.pods_project.targets.each do |target|
     flutter_additional_ios_build_settings(target)
+        target.build_settings['GCC_PREPROCESSOr_DEFINITIONS'] ||= [
+        '$(inherited)',
+        ## dart: PermissionGroup.microphone
+        'PERMISSION_MICROPHONE=1',
+        ]
   end
 end
